<?xml version="1.0" encoding="utf-8"?>
<!--
* <ul>
* Android Tutorial, An <strong>Android2EE</strong>'s project.</br>
* Produced by <strong>Dr. Mathias SEGUY</strong> with the smart contribution of <strong>Julien PAPUT</strong>.</br>
* Delivered by <strong>http://android2ee.com/</strong></br>
* Belongs to <strong>Mathias Seguy</strong></br>
* ****************************************************************************************************************</br>
* This code is free for any usage but can't be distribute.</br>
* The distribution is reserved to the site <strong>http://android2ee.com</strong>.</br>
* The intelectual property belongs to <strong>Mathias Seguy</strong>.</br>
* <em>http://mathias-seguy.developpez.com/</em></br>
* </br>
* For any information (Advice, Expertise, J2EE or Android Training, Rates, Business):</br>
* <em>mathias.seguy.it@gmail.com</em></br>
* *****************************************************************************************************************</br>
* Ce code est libre de toute utilisation mais n'est pas distribuable.</br>
* Sa distribution est reservée au site <strong>http://android2ee.com</strong>.</br>
* Sa propriété intellectuelle appartient à <strong>Mathias Séguy</strong>.</br>
* <em>http://mathias-seguy.developpez.com/</em></br>
* </br>
* Pour tous renseignements (Conseil, Expertise, Formations J2EE ou Android, Prestations, Forfaits):</br>
* <em>mathias.seguy.it@gmail.com</em></br>
* *****************************************************************************************************************</br>
* Merci à vous d'avoir confiance en Android2EE les Ebooks de programmation Android.
* N'hésitez pas à nous suivre sur twitter: http://fr.twitter.com/#!/android2ee
* N'hésitez pas à suivre le blog Android2ee sur Developpez.com : http://blog.developpez.com/android2ee-mathias-seguy/
* *****************************************************************************************************************</br>
* com.android2ee.android.tuto</br>
* 25 mars 2011</br>
 -->
<PreferenceScreen 
  xmlns:android="http://schemas.android.com/apk/res/android"> 
  <!-- Une Catégorie -->
  <!-- Une boîte de dialogue -->
  <PreferenceCategory android:title="Simple Preference"> 
    <CheckBoxPreference 
      android:key="@string/checkbox" 
      android:title="A checkBox preference :" 
      android:summary="Check or uncheck" 
    /> 
    <RingtonePreference 
      android:key="@string/ringtone" 
      android:title="Ring tone preference" 
      android:showDefault="true" 
      android:showSilent="true" 
      android:summary="Choose a ringTone" 
    /> 
  <!-- Une Catégorie -->
  </PreferenceCategory> 
  <!-- Une Catégorie -->
  <PreferenceCategory android:title="more details (another category)"> 
  <!-- Un autre écran de préférence-->
    <PreferenceScreen 
      android:key="detail" 
      android:title="Details" 
      android:summary="More details on another screen"> 
      <CheckBoxPreference 
        android:key="@string/checkbox2" 
        android:title="Another checkBox" 
        android:summary="On or Off" 
      /> 
    </PreferenceScreen> 
  </PreferenceCategory>
  <!-- Une Catégorie --> 
  <PreferenceCategory android:title="Others simples preferences(another category)"> 
    <EditTextPreference 
      android:key="@string/text" 
      android:title="Text editor dialog" 
      android:summary="Click to open an editor field" 
      android:dialogTitle="Any text is ok" 
    /> 
    <ListPreference 
      android:key="@string/list" 
      android:title="Choice dialog" 
      android:summary="Click to open a list of choices" 
      android:entries="@array/i_like_array"
      android:entryValues="@array/i_like_array"
      android:dialogTitle="Choose what you like" /> 
  </PreferenceCategory> 
</PreferenceScreen>
